--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto" id="nav-items">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link active" href="#">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">MENU</a>
@@ -47,8 +47,11 @@
                     </ul>
                 </div>
             </nav>
-            <p class="quote text-center">"You can't live a full life on empty stomach"</p>
-            <footer class="font-weight-light">
+            <div class="text-center quote">
+            <p>"You can't live a full life on empty stomach"</p>
+            <button class="btn hero-btn">ORDER NOW</button>
+            </div>
+            <footer class="font-weight-light ">
                 &copy; 2018 maxyum.com | All Rights Reserved.
             </footer>
         </div>
