--- a/loginform.html
+++ b/loginform.html
@@ -14,8 +14,25 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-    
+<body class="loginform">
+    <div class="container">
+        <form>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><img src="img/user.png" alt="usericon" style="height: 24px;width: 24px;"></span>
+                </div>
+                <input type="text" class="form-control" name="username" placeholder="Username">
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><img src="img/lock.png" alt="passwordicon" style="height: 24px;width: 24px;"></span>
+                </div>
+                <input type="password" class="form-control" name="password" placeholder="Password">
+            </div>
+            <button type="button" class="btn btn-primary loginbtn">Login&nbsp;<img src="img/login.png" alt="loginicon" style="height: 18px;width: 18px;"></button>
+            &nbsp;<a href="registerform.html">Don't have an account?&nbsp;Register now</a>
+        </form>
+    </div>
 </body>
 
 </html>
