Added new files

--- a/loginform.html
+++ b/loginform.html
@@ -29,7 +29,7 @@
                 </div>
                 <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
-            <button type="button" class="btn btn-primary loginbtn">Login&nbsp;<img src="img/login.png" alt="loginicon" style="height: 18px;width: 18px;"></button>
+            <input type="Submit" class="btn btn-primary loginbtn" value="Login">
             &nbsp;<a href="registerform.html">Don't have an account?&nbsp;Register now</a>
         </form>
     </div>
