--- a/registerform.html
+++ b/registerform.html
@@ -67,7 +67,7 @@
                 </div>
                 <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
-            <button type="button" class="btn btn-success btn-block">Register</button>
+            <input type="submit" class="btn btn-success btn-block" value="Register">
         </form>
     </div>
 </body>
