--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
         <div class="col-sm-6">
             <section class="message-template">
                 <h1>Message</h1>
-                <br><br>
+                <br>
+                <br>
                 <div class="form-group">
                     <input type="text" name="name" class="form-control" placeholder="Name">
                 </div>
@@ -35,7 +36,7 @@
                 <div class="form-group">
                     <textarea class="form-control" rows="5" placeholder="Comment"></textarea>
                 </div>
-                <button type="button" class="btn btn-primary btn-block">Submit</button>
+                <input type="submit" class="btn btn-primary btn-block" value="Submit">
             </section>
         </div>
     </div>
