--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="navbar-nav ml-auto" id="nav-items">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">HOME</a>
+                            <a class="nav-link active" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">MENU</a>
@@ -37,17 +37,17 @@
                             <a class="nav-link" href="#">FEEDBACK</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">LOGIN</a>
+                            <a class="nav-link" href="loginform.php">LOGIN</a>
                         </li>
                     </ul>
                 </div>
             </nav>
             <div class="text-center quote">
-            <p>"You can't live a full life on empty stomach"</p>
-            <button class="btn hero-btn">ORDER NOW</button>
+                <p>"You can't live a full life on empty stomach"</p>
+                <button class="btn hero-btn">ORDER NOW</button>
             </div>
             <footer class="font-weight-light ">
                 &copy; 2018 maxyum.com | All Rights Reserved.
