--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="loginform.php">LOGIN</a>
+                            <a class="nav-link" href="login.php">LOGIN</a>
                         </li>
                     </ul>
                 </div>
