--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>MAXYUM</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!--Cascading Stylesheet File-->
@@ -12,13 +12,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <!-- Fontawesome icons link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
+    <link rel="icon" href="./img/siteicon.png">
 </head>
 
 <body class="homepage">
-    <div>
+    <div class="first-tray">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-                <a class="navbar-brand logo" href="#">MUXYUM</a>
+                <img class="navbar-brand logo" src="./img/logo.png" height="100px">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -47,12 +51,71 @@
             </nav>
             <div class="text-center quote">
                 <p>"You can't live a full life on empty stomach"</p>
-                <button class="btn hero-btn">ORDER NOW</button>
+                <button class="btn">ORDER NOW</button>
             </div>
-            <footer class="font-weight-light ">
-                &copy; 2018 maxyum.com | All Rights Reserved.
-            </footer>
         </div>
+    </div>
+
+    <div class="container second-tray">
+        <p class="text-center titles display-4">Our Services</p>
+        <div class="row text-center">
+            <div class="col-md-3 col-sm-4">
+                <i class="fa fa-utensils fa-5x icons"></i>
+                <h3 class="second-tray-heading">FRESH FOOD</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+            </div>
+            <div class="col-md-3 col-sm-4">
+                <i class="icons fa fa-users fa-5x"></i>
+                <h3 class="second-tray-heading">EASY RESERVATION</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+            </div>
+            <div class="col-md-3 col-sm-4">
+                <i class="fa fa-shopping-bag fa-5x icons"></i>
+                <h3 class="secand-tray-headings">ORDER ONLINE</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+            </div>
+            <div class="col-md-3 col-sm-4">
+                <i class="fa fa-users fa-5x icons"></i>
+                <h3 class="second-tray-heading">QUALITY CUISINE</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+            </div>
+        </div>
+    </div>
+    <div class="third-tray">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="display-4 text-center third-tray-con">Our Story</p>
+                    <p class="third-tray-con">Who are in extremely love with eco friendly system. Lorem ipsum dolor sit
+                        amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                        veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <button class="btn" href="#">Read more</button>
+                </div>
+                <div class="col-md-6">
+                    <img src="./img/Cook.png" alt="image" width="435" height="450">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <h1>fgf</h1>
+    </div>
+
+    <div class="footer">
+        <footer class="font-weight-light ">
+            &copy; 2018 maxyum.com | All Rights Reserved.
+        </footer>
     </div>
 
 </body>
