--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Fontawesome icons link -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel="icon" href="./img/siteicon.png">
+    <link rel="icon" href="./img/logo.png">
 </head>
 
 <body class="homepage">
