--- a/menu.html
+++ b/menu.html
@@ -2,63 +2,121 @@
 <html>
 
 <head>
-    <title>MENU</title>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!--Cascading Stylesheet File-->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!--Bootstrap 4 CDN Link-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <!-- Fontawesome icons link -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-        crossorigin="anonymous">
-    <link rel="icon" href="./img/logo.png">
+  <title>MENU</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <!--Cascading Stylesheet File-->
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <!--Bootstrap 4 CDN Link-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <!-- Fontawesome icons link -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link rel="icon" href="./img/logo.png">
 </head>
 
-<body>
-    <div class="menu text-center">
-        <div class="text-center">
-            <span class="menu-icon"><img src="./img/logo.png" alt="logo" width="150em"></span>
-            <p class="display-3 menu-heading">OUR MENU</p>
-            <span class="menu-nev"><a class="menu-nev-a" href="./index.html">HOME</a> &nbsp;&nbsp;<span class="">MENU</span></span>
-        </div>
+<body class="menu-font">
+  <div class="menu text-center">
+    <div class="text-center">
+      <span class="menu-icon"><img src="./img/logo.png" alt="logo" width="150em"></span>
+      <p class="display-3 menu-heading">OUR MENU</p>
+      <span class="menu-nev"><a class="menu-nev-a" href="./index.html">HOME</a> &nbsp;&nbsp;<span class="">MENU</span></span>
     </div>
-   
-    
-<div class="container text-center">
-        <!-- Nav pills -->
-        <br><br>
-        <ul class="nav nav-pills justify-content-center" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active bg-warning" data-toggle="pill" href="#home">MAIN</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link bg-warning" data-toggle="pill" href="#menu1">DESSERTS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link bg-warning" data-toggle="pill" href="#menu2">DRINKS</a>
-          </li>
-        </ul>
-      
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <div id="home" class="container tab-pane active"><br>
-            <h3>HOME</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+
+
+  <div class="container text-center">
+    <!-- Nav pills -->
+    <br><br>
+    <ul class="nav nav-pills justify-content-center" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" data-toggle="pill" href="#home">MAIN</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" href="#menu1">DESSERTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="pill" href="#menu2">DRINKS</a>
+      </li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content">
+      <div id="home" class="container tab-pane active"><br>
+        <h3>MAIN</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua.</p>
+        <div class="row">
+          <div class="col-md-4">
+            <ul class="menu-dish">
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <div><h3>DISH-DISH.</h3>
+                <h4>150/-</h4></div>
+              </li>
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+            </ul>
           </div>
-          <div id="menu1" class="container tab-pane fade"><br>
-            <h3>Menu 1</h3>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="col-md-4">
+            <ul class="menu-dish">
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+            </ul>
           </div>
-          <div id="menu2" class="container tab-pane fade"><br>
-            <h3>Menu 2</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+          <div class="col-md-4">
+            <ul class="menu-dish">
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+              <li class="dish-head"><img class="img-thumbnail" width="250" src="./img/hero.jpg" alt="dish-image">
+                <h3>DISH-DISH.</h3>
+                <h4>150/-</h4>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+      <div id="menu1" class="container tab-pane fade"><br>
+        <h3>DESSERTS</h3>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </div>
+      <div id="menu2" class="container tab-pane fade"><br>
+        <h3>DRINKS</h3>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+          rem
+          aperiam.</p>
+      </div>
+      <hr><hr size="10px">
+      <div class="menu-order-btn">
+        <p class="display-5">Why Wait?&nbsp;<br><button class="btn btn-warning" href="#">ORDER NOW</button>
+      </div>
+    </div>
+  </div>
 
 </body>
 
